# gwpspider_interfaces

./: CMakeLists.txt  gwp_interfaces_data.py  package.xml
gwpspider_interfaces/: gwp_interfaces_data.py
msg/: BnoData.msg  DynamixelMotorsData.msg  GripperCommand.msg  GripperState.msg  GrippersStates.msg  LegTrajectory.msg  LegsStates.msg  WalkingInstructions.msg  WaterPumpCommand.msg
srv/: ApplyForceLeg.srv  ApplyForcesOnLegs.srv  BreaksControl.srv  ControlWaterPump.srv  DistributeForces.srv  GetCorrectionOffset.srv  GetLegTrajectory.srv  GetModifiedWalkingInstructions.srv  GetOffsetsToChargingPosition.srv  GetSpiderPose.srv  GetWalkingInstructions.srv  GripperError.srv  MoveGripper.srv  MoveLeg.srv  MoveLegVelocityMode.srv  MoveSpider.srv  RebootMotors.srv  SpiderGoal.srv  ToggleAdditionalControllerMode.srv  ToggleMotorsTorque.srv
srv/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
srv/log/: latest_build
